# Engineers-The-Game-Rust

./: Cargo.toml  README.md
assets/: tiledmap.json
src/: main.rs  sprite.rs  tiledmap.rs
src/model/: gamemanager.rs  gamestate.rs  requests.rs
src/pathfinding/: pathfinder.rs
src/sprites/: engineersprite.rs  mechsprite.rs  sprite.rs  tilesprite.rs
web/: index.html
