[package]
name = "engineers"
version = "0.1.0"
authors = ["Paul Bryden <p.d.bry@outlook.com>"]
edition = "2018"

[dependencies]
nanoserde = "0.1"
macroquad = "0.3.13"
macroquad-platformer = "0.1"
macroquad-particles = {version = "0.1", features = ["nanoserde"] }
bitfield = "0.13"
base64 = "0.13"
serde = {version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
include_dir = "0.6.0"
log = "0.4.14"

[profile.test] 
opt-level = 3