[package]
name = "engineers"
version = "0.1.0"
authors = ["Paul Bryden <p.d.bry@outlook.com>"]
edition = "2018"

[dependencies]
nanoserde = "0.1.32"
macroquad = "0.3.25"
macroquad-platformer = "0.1.3"
macroquad-particles = {version = "0.1.1", features = ["nanoserde"] }
bitfield = "0.14.0"
base64 = "0.21.0"
serde = {version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
include_dir = "0.7.3"
log = "0.4.17"
quad-net = { git = "https://github.com/not-fl3/quad-net" }

[profile.test] 
opt-level = 3